fixed pager wrapping for content in responsive for #9284

--- a/openscholar/themes/hwpi_basetheme/css/responsive.nav.css
+++ b/openscholar/themes/hwpi_basetheme/css/responsive.nav.css
@@ -324,6 +324,9 @@
         width: 100%!important;
         float: left!important;
     }
+	.view-content ~ .item-list ul.pager li {
+		line-height: 3em;
+	}
 }
 /*--------------------------------------------------------*/
 
